--- a/frontent/package.json
+++ b/frontent/package.json
@@ -17,6 +17,7 @@
     "i18next-http-backend": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
     "react-phone-number-input": "^3.4.11",
@@ -24,12 +25,14 @@
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
     "redux-persist": "^6.0.0",
-    "swiper": "^11.2.1"
+    "swiper": "^11.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/node": "^22.13.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-select-country-list": "^2.2.3",
     "@typescript-eslint/eslint-plugin": "^8.19.0",
     "@typescript-eslint/parser": "^8.19.0",
